# ngspice_simulator

./: .gitignore  Dockerfile  NGSPICE_EXPERIMENT_REPORT.md  README.md  docker-compose.yml  jest.config.ts  main.py  mcp_server.py  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  simulation_manager.py  tsconfig.json
docs/: Journal.md  Librarian.md  VHL.drawio  VIRTUAL_HARDWARE_LAB_DOCUMENTATION.md  bell_corridor.md  bq79616_scud.md  docker-deployment.md  tscircuit_operational_manual.md
librarian_agent/: agent.py  main.py  prompts.py  utils.py
ngspice_simulator_package/: mcp_server.py
runs/20251121083927_54ed2db6/: control.cir  eis_data.txt  manifest.json  merged.cir  model.cir
src/: index.ts
src/config/: paths.ts
src/mcp/: server.ts
src/mcp/tools/: addComponent.ts  listLocal.ts  resolveComponent.ts  searchLibrary.ts
src/mcp/transport/: HttpServerTransport.ts
src/runtime/: libraryFs.ts
tests/: test_librarian.py  test_mcp_server_api.py  test_simulation_manager.py
tests/docker/: http-transport.test.ts
tests/mcp/: addComponent.test.ts  listLocal.test.ts  protocol_conformance.test.ts  resolveComponent.test.ts  searchLibrary.test.ts  server.test.ts
tests/runtime/: libraryFs.test.ts
virtual_hardware_lab/: main.py  mcp_server.py
virtual_hardware_lab/mcp_server_api/: mcp_server.py  rpc_methods.py  schemas.py  tool_definitions.py  utils.py
virtual_hardware_lab/simulation_core/: simulation_manager.py
